Bug 683099 - NS_NATIVE_WINDOW value should not be used as IPC shareable . r=roc